President and CEO bug fixes

--- a/src/app/pages/company/about-us/about-us.html
+++ b/src/app/pages/company/about-us/about-us.html
@@ -152,17 +152,18 @@
 
 
   @if (tab() == 2) {
-  <div class="title-badge ldisplay">
-    <p class="ldisplay">our president and ceo</p>
+  <div class="title-badge">
+    <p class="xldisplay tab-header">Our President & CEO</p>
     <div class="red-bar"></div>
   </div>
-  <p class="mediumTitle white">The man behind the HPI success.</p>
+  <p class="mediumTitle">The man behind the HPI success.</p>
+
   <div class="content">
     <div class="quote xxldisplay">“</div>
     <div class="ceo">
       <img src="assets/images/aboutus/ceo/CEO.svg" alt="">
     </div>
-    <div class="message-container mediumTitle white">
+    <div class="OPCmessage-container largeBody">
       Engr. Eric Jude S. Soliman or EJSS is the Founder, President, and CEO of Hytec Power Incorporated, one of the
       leadingproviders of educational and industrial solutions in the country. A visionary man, EJSS founded the
       company from scratch in 1994 and lead its stimulating growth for more than 27 years. the venues that were
@@ -172,26 +173,38 @@
       order to achieve safety, productivity and efficiency. Eventually, HPI expanded its services to industry by
       try-ing to solve the roots of skills mismatch HPI engaged into educational innovations in learning and
       training, to help our country prepare job-ready 21st century workers and professionals.
+
+
       <div class="achievements">
         <div class="container">
           <div class="achievement-container">
-            <div class="red-dot"></div>Licensed Mechanical Engineer
+            <div class="red-dot"></div>
+            Licensed Mechanical Engineer
           </div>
+
           <div class="achievement-container">
-            <div class="red-dot"></div>Leadership, Legacy Icon, and CEO of the Year Awardee
+            <div class="red-dot"></div>
+            Leadership, Legacy Icon, and CEO of the Year Awardee
           </div>
         </div>
+
         <div class="container">
           <div class="achievement-container">
-            <div class="red-dot"></div>Conferred as Asean Engineer last 2015
+            <div class="red-dot"></div>
+            Conferred as ASEAN Engineer in 2015
           </div>
+
           <div class="achievement-container">
-            <div class="red-dot"></div>Former Chairman of MRSP Convention
+            <div class="red-dot"></div>
+            Former Chairman of MRSP Convention
           </div>
         </div>
       </div>
+
+
     </div>
   </div>
+  
   <div class="attributes">
     <div class="contents">
       <img src="assets/images/aboutus/ceo/goal.png" alt="">
