--- a/src/app/pages/company/about-us/about-us.scss
+++ b/src/app/pages/company/about-us/about-us.scss
@@ -9,6 +9,7 @@
       rgba(80, 0, 0, 0.25) 0%,
       rgba(20, 0, 0, 0.65) 10%,
       #000000 100%);
+  overflow-x: hidden;
 }
 
 .main-container {
@@ -390,3 +391,116 @@
     }
   }
 }
+
+
+/* ⋆｡˚ ୨୧ ˚｡⋆ Our President & CEO ⋆｡˚ ୨୧ ˚｡⋆ */
+
+.content{
+  position: relative;
+  width: 73%;
+  height: max-content;
+  border: 1px solid color.$secondaryAlpha10;
+  padding: 8vh 0 5vh;
+  border-radius: 12px;
+  background-color: color.$secondaryAlpha5;
+
+  .quote {
+    color: color.$primaryAlpha50;
+    position: absolute;
+    line-height: 0;
+    margin: 0;
+    left: 1.8vw;
+  }
+
+  .OPCmessage-container {
+    max-width: 71%;
+    text-wrap: wrap;
+    text-align: justify;
+    margin-left: 3vw;
+  }
+
+  .ceo {
+    position: absolute;
+    bottom: -1.4vh;
+    right: -2.5vw;
+    margin: 0%;
+    width: 28%;
+  }
+
+  /* Hide on mobile */
+  @media (max-width: 768px) {
+    .ceo {
+      display: none;
+    }
+  }
+
+  .achievements {
+    display: flex;
+    justify-content: space-between;
+    gap: 2rem;
+    padding-top: 2rem;
+
+    .container {
+      display: flex;
+      flex-direction: column;
+      gap: 1rem;
+      flex: 1;
+
+      .achievement-container {
+        display: flex;
+        align-items: flex-start; // fixes multiline alignment
+        gap: 0.6rem;
+        line-height: 1.4;
+
+        .red-dot {
+          width: 6px;
+          height: 6px;
+          background-color: #ED1C24;
+          border-radius: 50%;
+          margin-top: 0.45em; // aligns with first line of text
+          flex-shrink: 0;
+        }
+      }
+    }
+  }
+
+}
+.attributes {
+  background-color: color.$secondaryAlpha5;
+  border: 1px solid color.$secondaryAlpha10;
+  border-radius: 13px;
+  width: 90%;
+  position: relative;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  padding: 7vh 2vw;
+  margin-top: 3vh;
+
+  .contents{
+    color: white;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 5vh;
+
+    img {
+      width: 5.5vw;
+    }
+
+    .message{
+      display: flex;
+      flex-direction: column;
+      text-align: center;
+      gap:2vh;
+
+      p{
+        margin: 0;
+      }
+    }
+  }
+}
+
+
+
+
